PyMaker/datas/object2/RawHTML/i12901/Python_DOC_referPages.python-why-do-i-get-this-error.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/826948/syntax-error-on-print-with-python-3">Syntax error on print with Python 3 [duplicate]</a>
<span class="question-originals-answer-count">
                    9 answers
                </span>
</li>
</ul>
</div>
<p>I am a python newbie.  I am trying to understand why I get this error:</p>
<pre><code>File "python-challenge-1.py", line 12
    print original.translate(table)
             ^
</code></pre>
<p>SyntaxError: invalid syntax</p>
<p>Here is the full code:</p>
<pre><code>import string

original = "g fmnc wms bgblr rpylqjyrc gr zw fylb. rfyrq ufyr amknsrcpq ypc " \
    "dmp. bmgle gr gl zw fylb gq glcddgagclr ylb rfyr'q ufw rfgq " \
    "rcvr gq qm jmle. sqgle qrpgle.kyicrpylq() gq pcamkkclbcb. lmu " \
    "ynnjw ml rfc spj."

table = string.maketrans(
"abcdefghijklmnopqrstuvwxyz", "cdefghijklmnopqrstuvwxyzab"
)

print original.translate(table)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p><a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow noreferrer"><code>print()</code></a> is a function in Python 3, but <a href="https://docs.python.org/2/reference/simple_stmts.html#print" rel="nofollow noreferrer"><code>print</code></a> is a keyword in Python 2. Check <a href="https://www.python.org/dev/peps/pep-3105/" rel="nofollow noreferrer">PEP 3105</a> for more info. Also <a href="https://stackoverflow.com/questions/12162629/using-print-in-python2-x">here</a>'s a good question on SO.</p>
<p>You should try changing it to this:</p>
<pre><code>print(original.translate(table))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>as @JoshRumbut has pointed out, <code>print()</code> is really a function.</p>
<p>In <em>Python2</em>, you could write <code>print 12</code>, but this has been abandoned in <em>Python3</em>, so you now <em>must</em> write <code>print(12)</code>.</p>
<p>Luckily, <em>Python2</em> understands the functional version as well, so in general you are better off using this one.</p>
</div>
<span class="comment-copy">works fine under python 2.7. Perhaps you're using python 3. Put brackets after the print statement</span>
<span class="comment-copy">Not to be overly pedantic but technically Python2's version is a statement, print('foo') works in Python 2 because the expression following the print statement is coerced to a string value and then passed to print.  This means print (&lt;something) will have different meanings on Python 2 depending on what &lt;something&gt; is.  Print (1,2) means "print the tuple (1,2)" whereas "print (1)" means "print the value of the expression "(1)" which is equal to just "1".  The output of print(1,2) then on Python2, while it will run, will be different to that of Python3.</span>
<span class="comment-copy">@W.Prins: What you say is certainly correct, however, later versions of Python 2 <i>do</i> support the <code>print</code> function. It is normally masked by the <code>print</code> statement, but it can be exposed by putting <code>from __future__ import print_function</code> before any other <code>import</code> statements. (FWIW, I use Python 2.6.6).</span>
<span class="comment-copy">@PM2Ring Yes indeed. Thanks for adding that as well.</span>
